--- a/backend-rust/Cargo.toml
+++ b/backend-rust/Cargo.toml
@@ -12,7 +12,7 @@ prost = "0.14.1"
 redis = { version = "1.0.0", features = ["tokio-comp"] }
 serde = "1.0.228"
 serde_json = "1.0.145"
-sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 time = { version = "0.3.36", features = ["serde", "macros"] }
 tonic = "0.14.2"
@@ -22,6 +22,8 @@ tracing-subscriber = "0.3.22"
 thiserror = "1.0.61"
 uuid = { version = "1.19.0", features = ["v4", "serde"] }
 validator = { version = "0.20.0", features = ["derive"] }
+tower-http = { version = "0.6.2", features = ["trace"] }
+tower = "0.5.2"
 
 [build-dependencies]
 prost = "0.14.1"
